# resharp

./: .gitignore  Cargo.toml  LICENSE  README.md
data/haystacks/: en-sampled-seeded.txt  length-15-sorted-less.txt  smallserver.txt
data/regexes/: dictionary-fixed-context-short.txt
docs/: api.md  features.md  syntax.md
resharp-algebra/: Cargo.toml
resharp-algebra/src/: lib.rs  nulls.rs  solver.rs
resharp-algebra/src/unicode_classes/: classes.rs  mod.rs
resharp-engine/: Cargo.toml
resharp-engine/benches/: comparison.rs  experiments.rs  ismatch.rs  regression.rs  serialization.rs
resharp-engine/examples/: basic.rs  bench_adhoc.rs  bench_diagnose.rs  check_prefix.rs  dict_bench.rs  gen_unicode_classes.rs  profile_hardened.rs  test_cloudflare.rs  test_date.rs  test_la.rs  test_la_bench.rs  test_nulls.rs  verify_bounded.rs
resharp-engine/src/: accel.rs  engine.rs  fas.rs  lib.rs  precompiled.rs  prefix.rs  simd.rs
resharp-engine/src/simd/: byte_freq.rs  mod.rs  neon.rs  wasm.rs
resharp-engine/tests/: accel_skip.toml  accel_skip_test.rs  anchors.toml  auto_harden.toml  auto_harden_test.rs  basic.toml  boolean.toml  cloudflare_redos.toml  convergence_spike.rs  cross_feature.toml  deriv.toml  deriv_test.rs  edge_cases.toml  engine_test.rs  errors.toml  find_anchored.toml  fuzz_compare.rs  internal.toml  javascript.toml  literal_alt.toml  lookaround.toml  neon_simd_test.rs  normalize.toml  paragraph.toml  parser.rs  prefix.toml  prefix_test.rs  properties_test.rs  rev_nulls.toml  rev_nulls_test.rs  word_boundary.toml
resharp-ffi/: Cargo.toml
resharp-ffi/src/: lib.rs
resharp-parser/: Cargo.toml
resharp-parser/src/: ast.rs  lib.rs
