[package]
name = "resharp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "high-performance regex engine with intersection and complement operations"
keywords = ["regex", "automata", "intersection", "complement"]
categories = ["text-processing"]
documentation = "https://docs.rs/resharp"
readme = "../README.md"

[lib]
doctest = false

[features]
debug-nulls = []
diag = []

[dependencies]
resharp-algebra = { version = "0.3.1", path = "../resharp-algebra" }
resharp-parser = { version = "0.3.1", path = "../resharp-parser" }
serde = { version = "1", features = ["derive"] }
bincode = "1"

[dev-dependencies]
resharp = { path = ".", features = ["diag"] }
resharp-algebra = { version = "0.3.1", path = "../resharp-algebra" }
resharp-parser = { version = "0.3.1", path = "../resharp-parser" }
regex-syntax = "0.8.5"
toml = "0.8"
criterion = "0.5"
regex = "1"
fancy-regex = "0.14"
regex-automata = "0.4.14"
aho-corasick = "1"

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "regression"
harness = false

[[bench]]
name = "ismatch"
harness = false

[[bench]]
name = "experiments"
harness = false

[[bench]]
name = "serialization"
harness = false
