[package]
name = "resharp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "high-performance regex engine with intersection and complement operations"
keywords = ["regex", "automata", "intersection", "complement"]
categories = ["text-processing"]
documentation = "https://docs.rs/resharp"
readme = "../README.md"

[lib]
doctest = false

[features]
debug = []
diag = []
precompile-tests = []

[dependencies]
resharp-algebra.workspace = true
resharp-parser.workspace = true
rustc-hash = "2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
resharp = { path = ".", features = ["diag"] }
resharp-algebra.workspace = true
resharp-parser.workspace = true
regex-syntax = "0.8.5"
toml = "0.8"
regex = "1"
fancy-regex = "0.14"
regex-automata = "0.4.14"
aho-corasick = "1"
serde_json = "1"

# rayon doesn't compile on wasi
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"

[[bin]]
name = "build_byte_freq"
path = "src/bin/build_byte_freq.rs"

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "regression"
harness = false

[[bench]]
name = "ismatch"
harness = false

[[bench]]
name = "experiments"
harness = false


